add delete Action

--- a/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
@@ -31,7 +31,7 @@
                                         <ul class="dropdown-menu">
                                             <li><a href="#"><i class="fa fa-eye fa-fw"></i> Dettagli</a></li>
                                             <li><a href="#"><i class="fa fa-pencil fa-fw"></i> Modifica</a></li>
-                                            <li><a href="#"><i class="fa fa-trash-o fa-fw"></i> Elimina</a></li>
+                                            <li><a href="{{ path('apw_blackbull_categories_deletecategory',{'id': category.getId}) }}"><i class="fa fa-trash-o fa-fw"></i> Elimina</a></li>
                                         </ul>
                                     </div>
                                 </td>
