Revert "Modifica delete view"
This reverts commit 2be87b5cf77553a498117b55ae53a633f5478e61.

--- a/src/Apw/BlackbullBundle/Resources/views/Categories/deleteCategory.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Categories/deleteCategory.html.twig
@@ -2,8 +2,6 @@
 
 
 {% block body %}
-<h3>Elimino la categoria: {{ id }}</h3>
-    <hr>
-    <a class="btn btn-primary btn-lg" href="{{ app.request.headers.get('referer') }}"><i class="fa fa-arrow-circle-left"></i> Torna all'elenco</a>
+elimino la categoria {{ id }}
 {% endblock %}
 
