--- a/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
@@ -6,10 +6,17 @@
 {% block title %}Elenco delle categorie prodotti{% endblock %}
 
 {% block body %}
-<h3>Elenco delle categorie prodotti</h3>
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-10">
+            <ol class="breadcrumb">
+                <li><a href="{{ path('_welcome') }}">Home</a></li>
+                <li><a href="#">Categorie Prodotti</a></li>
+            </ol>
+            <div class="page-header">
+                <a href="{{ path('apw_blackbull_categories_createcategory') }}" class="btn btn-success btn-lg" role="button"><i class="fa fa-plus-circle"></i> Aggiungi Categoria</a>
+            </div>
+
             <!-- Table -->
             <table id="categoryTbl" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
@@ -29,7 +36,7 @@
                                         <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
                                             <span class="fa fa-caret-down"></span></a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="#"><i class="fa fa-eye fa-fw"></i> Dettagli</a></li>
+                                            <li><a href="#"><i class="fa fa-cubes fa-fw"></i> Prodotti</a></li>
                                             <li><a href="#"><i class="fa fa-pencil fa-fw"></i> Modifica</a></li>
                                             <li><a href="{{ path('apw_blackbull_categories_deletecategory',{'id': category.getId}) }}"><i class="fa fa-trash-o fa-fw"></i> Elimina</a></li>
                                         </ul>
