--- a/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
@@ -14,15 +14,15 @@
                 <li><a href="#">Categorie Prodotti</a></li>
             </ol>
             <div class="page-header">
-                <a href="{{ path('apw_blackbull_categories_createcategory') }}" class="btn btn-success btn-lg" role="button"><i class="fa fa-plus-circle"></i> Aggiungi Categoria</a>
+                <a href="{{ path('apw_blackbull_categories_createcategory') }}" class="btn btn-success btn-lg" role="button"><i class="fa fa-plus-circle fa-fw"></i> Aggiungi Categoria</a>
             </div>
 
             <!-- Table -->
-            <table id="categoryTbl" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <table id="categoryTbl" class="table table-striped table-hover" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th>Categorie/Prodotti</th>
-                        <th> </th>
+                        <th>Azione</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,10 +30,19 @@
                     {% for category in categories %}
                         {% for categoryDesc in category.getCategoryDescription %}
                             <tr>
-                                <td> {{ categoryDesc.categoriesName }}<span class="badge pull-right">{{ category.getProducts|length }}</span></td>
-                                <td>
+                                <td class="col-md-10">
+                                    {% if category.getProducts|length > 0%}
+                                        <a href="#" class="">{{ categoryDesc.categoriesName }}</a>
+                                    {% else %}
+                                        {{ categoryDesc.categoriesName }}
+                                    {% endif %}
+                                    <span class="badge pull-right">
+                                        {{ category.getProducts|length }}
+                                    </span>
+                                </td>
+                                <td class="col-md-2">
                                     <div class="btn-group btn-group-xs">
-                                        <a class="btn btn-primary"><i class="fa fa-gear fa-fw"></i> Azioni</a>
+                                        <a href="#" class="btn btn-primary"><i class="fa fa-arrows fa-fw"></i> Sposta</a>
                                         <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
                                             <span class="fa fa-caret-down"></span></a>
                                         <ul class="dropdown-menu">
