--- a/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
@@ -6,59 +6,61 @@
 {% block title %}Elenco delle categorie prodotti{% endblock %}
 
 {% block body %}
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-            <ol class="breadcrumb">
-                <li><a href="{{ path('_welcome') }}">Home</a></li>
-                <li><a href="#">Categorie Prodotti</a></li>
-            </ol>
-            <div class="page-header">
-                <a href="{{ path('apw_blackbull_categories_createcategory') }}" class="btn btn-success btn-lg" role="button"><i class="fa fa-plus-circle fa-fw"></i> Aggiungi Categoria</a>
-            </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <ol class="breadcrumb">
+                    <li><a href="{{ path('_welcome') }}">Home</a></li>
+                    <li><a href="#">Categorie Prodotti</a></li>
+                </ol>
+                <div class="page-header">
+                    <a href="{{ path('apw_blackbull_categories_createcategory') }}" class="btn btn-success btn-lg" role="button"><i class="fa fa-plus-circle fa-fw"></i> Aggiungi Categoria</a>
+                </div>
 
-            <!-- Table -->
-            <table id="categoryTbl" class="table table-striped table-hover" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-                        <th>Categorie/Prodotti</th>
-                        <th>Azione</th>
-                    </tr>
-                </thead>
-                <tbody>
-                {#{{ dump(categories) }}#}
-                    {% for category in categories %}
-                        {% for categoryDesc in category.getCategoryDescription %}
-                            <tr>
-                                <td class="col-md-10">
-                                    {% if category.getProducts|length > 0%}
-                                        <a href="#" class="">{{ categoryDesc.categoriesName }}</a>
-                                    {% else %}
-                                        {{ categoryDesc.categoriesName }}
-                                    {% endif %}
-                                    <span class="badge pull-right">
-                                        {{ category.getProducts|length }}
-                                    </span>
-                                </td>
-                                <td class="col-md-2">
-                                    <div class="btn-group btn-group-xs">
-                                        <a href="#" class="btn btn-primary"><i class="fa fa-arrows fa-fw"></i> Sposta</a>
-                                        <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
-                                            <span class="fa fa-caret-down"></span></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="#"><i class="fa fa-cubes fa-fw"></i> Prodotti</a></li>
-                                            <li><a href="#"><i class="fa fa-pencil fa-fw"></i> Modifica</a></li>
-                                            <li><a href="{{ path('apw_blackbull_categories_deletecategory',{'id': category.getId}) }}" onclick="return confirm('Confermi l\'eliminazione?')"><i class="fa fa-trash-o fa-fw"></i> Elimina</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
+                <!-- Table -->
+                <table id="categoryTbl" class="table table-striped table-hover" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Categorie/Prodotti</th>
+                            <th>Azione</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {#{{ dump(categories) }}#}
+                        {% for category in categories %}
+                            {% for categoryDesc in category.getCategoryDescription %}
+                                <tr>
+                                    <td class="col-md-10">
+                                        {% if category.getProducts|length > 0%}
+                                            <a href="#" class="">{{ categoryDesc.categoriesName }}</a>
+                                        {% else %}
+                                            {{ categoryDesc.categoriesName }}
+                                        {% endif %}
+                                        <span class="badge pull-right">
+                                            {{ category.getProducts|length }}
+                                        </span>
+                                    </td>
+                                    <td class="col-md-2">
+                                        <div class="btn-group btn-group-xs">
+                                            <a href="#" class="btn btn-primary"><i class="fa fa-arrows fa-fw"></i> Sposta</a>
+                                            <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+                                                <span class="fa fa-caret-down"></span></a>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="#"><i class="fa fa-cubes fa-fw"></i> Prodotti</a></li>
+                                                <li><a href="#"><i class="fa fa-pencil fa-fw"></i> Modifica</a></li>
+                                                <li><a href="{{ path('apw_blackbull_categories_deletecategory',{'id': category.getId}) }}" onclick="return confirm('Confermi l\'eliminazione?')"><i class="fa fa-trash-o fa-fw"></i> Elimina</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
+                                </tr>
+                            {% endfor %}
                         {% endfor %}
-                    {% endfor %}
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-1"></div>
         </div>
-        <div class="col-md-1"></div>
     </div>
 {% endblock %}
 {% block javascripts %}
