--- a/src/Apw/BlackbullBundle/Resources/views/Categories/showCategory.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Categories/showCategory.html.twig
@@ -38,11 +38,13 @@
                             </span>
                         </td>
                         <td>
-                            {% if category.getCategoriesStatus %}
-                                <span class="label label-success">Online</span>
-                            {% else %}
-                                <span class="label label-default">Offline</span>
-                            {% endif %}
+                            <form action="#" method="post">
+                                {% if category.getCategoriesStatus %}
+                                    <input id="categoryStatus" type="checkbox" name="categoryStatus" onchange="submit()" checked data-toggle="toggle" data-onstyle="success" data-size="mini" data-on="Online" data-off="Offline">
+                                {% else %}
+                                    <input id="categoryStatus" type="checkbox" name="categoryStatus" onchange="submit()" data-toggle="toggle" data-onstyle="success" data-size="mini" data-off="Offline" data-on="Online">
+                                {% endif %}
+                            </form>
                         </td>
                         <td class="col-md-2">
                             <div class="btn-group btn-group-xs">
@@ -69,13 +71,25 @@
                             </span>
                             </td>
                             <td>
-                                {% if product.getProductsStatus %}
-                                    <span class="label label-success">Online</span>
-                                {% else %}
-                                    <span class="label label-default">Offline</span>
-                                {% endif %}
+                                <form action="#" method="post">
+                                    {% if product.getProductsStatus %}
+                                        <input id="categoryStatus" type="checkbox" name="categoryStatus" onchange="submit()" checked data-toggle="toggle" data-onstyle="success" data-size="mini" data-on="Online" data-off="Offline">
+                                    {% else %}
+                                        <input id="categoryStatus" type="checkbox" name="categoryStatus" onchange="submit()" data-toggle="toggle" data-onstyle="success" data-size="mini" data-off="Offline" data-on="Online">
+                                    {% endif %}
+                                </form>
                             </td>
-                            <td></td>
+                            <td class="col-md-2">
+                                <div class="btn-group btn-group-xs">
+                                    <a href="#" class="btn btn-primary"><i class="fa fa-arrows fa-fw"></i> Sposta</a>
+                                    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+                                        <span class="fa fa-caret-down"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#"><i class="fa fa-pencil fa-fw"></i> Modifica</a></li>
+                                        <li><a href="{{ path('apw_blackbull_categories_deletecategory',{'id': category.getId}) }}" onclick="return confirm('Confermi l\'eliminazione?')"><i class="fa fa-trash-o fa-fw"></i> Elimina</a></li>
+                                    </ul>
+                                </div>
+                            </td>
                         </tr>
                     {% endfor %}
                 {% endfor %}
