--- a/src/Apw/BlackbullBundle/Resources/views/Products/createProduct.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Products/createProduct.html.twig
@@ -1,7 +1,8 @@
+{% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
 {% extends "::base.html.twig" %}
 
 {% block title %}ApwBlackbullBundle:Products:createProduct{% endblock %}
 
-{% block body %}
-<h1>Welcome to the Products:createProduct page</h1>
+{% block centralSide %}
+{{ form(form) }}
 {% endblock %}
