--- a/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Categories/showCategories.html.twig
@@ -6,11 +6,40 @@
 {% block title %}Elenco delle categorie prodotti{% endblock %}
 
 {% block centralSide %}
+    <!-- modal della lista categorie -->
+    <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fa fa-times"></i></span></button>
+                    <h4 class="modal-title" id="exampleModalLabel">Scegli la categoria</h4>
+                </div>
+                <div class="modal-body">
+                    {# chiamare un controller per listare tutte le categorie #}
+                    <div class="list-group categoriesList">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {#{{ dump(categories) }}#}
     <ol class="breadcrumb">
         <li><a href="{{ path('_welcome') }}">Home</a></li>
-        <li><a>Categorie Prodotti</a></li>
+        <li><a href="{{ path('apw_blackbull_categories_showcategories') }}">Categorie Prodotti</a></li>
+        {% if category is defined %}
+            {% set catName = "" %}
+            {% set catParentId = category.getParentId %}
+            {% for item in category.getCategoryDescription %}
+                {% set catName = item.categoriesName %}
+            {% endfor %}
+            <li><a href="#">{{ catName }}</a></li>
+        {% endif %}
     </ol>
     <div class="page-header">
+        {% if catParentId is defined %}
+            <a href="{{ path('apw_blackbull_categories_showcategories',{'id' : catParentId}) }}" class="btn btn-default btn-lg"><i class="fa fa-level-up"></i></a>
+        {% endif %}
         <a href="{{ path('apw_blackbull_categories_createcategory') }}" class="btn btn-success btn-lg"><i class="fa fa-plus-circle fa-fw"></i> Aggiungi Categoria</a>
         <a href="#" class="btn btn-primary btn-lg"><i class="fa fa-plus-circle fa-fw"></i> Aggiungi Prodotto</a>
     </div>
@@ -25,28 +54,26 @@
             </tr>
         </thead>
         <tbody>
-        {#{{ dump(categories) }}#}
-            {% for category in categories %}
+            {% for category in childCategories %}
                 {% for categoryDesc in category.getCategoryDescription %}
                     <tr>
-                        <td class="col-md-10">
-                                <i class="fa fa-folder-o"></i><a href="{{ path('apw_blackbull_categories_showcategory',{'id' : category.getId}) }}"> {{ categoryDesc.categoriesName }}</a>
+                        <td class="col-md-9">
+                                <i class="fa fa-folder-o"></i><a href="{{ path('apw_blackbull_categories_showcategories',{'id' : category.getId}) }}"> {{ categoryDesc.categoriesName }}</a>
                             <span class="badge pull-right">
                                 {{ category.getProducts|length }}
                             </span>
                         </td>
-                        <td>
+                        <td class="col-md-1 text-center">
                             <form action="{{ path('apw_blackbull_categories_updcategorystatus', {'categoryId':category.getId}) }}" method="post">
                                 {% if category.getCategoriesStatus %}
-                                    <input id="categoryStatus" type="checkbox" value="{{ category.getCategoriesStatus }}" name="categoryStatus" onchange="submit()" checked data-toggle="toggle" data-onstyle="success" data-size="mini" data-on="<i class='fa fa-rocket'></i>Online" data-off="<i class='fa fa-rocket fa-rotate-180'></i>Offline">
+                                    <input id="categoryStatus" type="checkbox" value="{{ category.getCategoriesStatus }}" name="categoryStatus" onchange="submit()" checked data-toggle="toggle" data-onstyle="success" data-size="mini" data-on="<i class='fa fa-rocket'></i>" data-off="<i class='fa fa-rocket fa-rotate-180'></i>">
                                 {% else %}
-                                    <input id="categoryStatus" type="checkbox" value="1" name="categoryStatus" onchange="submit()" data-toggle="toggle" data-onstyle="success" data-size="mini" data-on="<i class='fa fa-rocket'></i>Online" data-off="<i class='fa fa-rocket fa-rotate-180'></i>Offline">
-                                {% endif %}
-                            </form>
+                                    <input id="categoryStatus" type="checkbox" value="1" name="categoryStatus" onchange="submit()" data-toggle="toggle" data-onstyle="success" data-size="mini" data-on="<i class='fa fa-rocket'></i>" data-off="<i class='fa fa-rocket fa-rotate-180'></i>">
+                                {% endif %}                            </form>
                         </td>
-                        <td class="col-md-2">
+                        <td class="col-md-2 text-center">
                             <div class="btn-group btn-group-xs">
-                                <a href="{{ path('apw_blackbull_categories_movecategory',{'id': category.getId}) }}" class="btn btn-primary"><i class="fa fa-arrows fa-fw"></i> Sposta</a>
+                                <a href="#" id="{{ category.getId }}" class="btn btn-primary listCategoryToMove" data-toggle="modal" data-target=".bs-example-modal-sm"><i class="fa fa-arrows fa-fw"></i> Sposta</a>
                                 <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
                                     <span class="fa fa-caret-down"></span></a>
                                 <ul class="dropdown-menu">
@@ -57,6 +84,38 @@
                         </td>
                     </tr>
                 {% endfor %}
+                {% for product in category.getProducts %}
+                    {% for productDescription in product.getProductsDescription %}
+                        <tr>
+                            <td>
+                                <i class="fa fa-cubes"></i> {{ productDescription.getProductsName }} ({{ product.getProductsModel }})
+                            <span class="badge pull-right">
+                            {{ product.getProductsQuantity }}
+                        </span>
+                            </td>
+                            <td class="col-md-1 text-center">
+                                <form action="{{ path('apw_blackbull_products_updproductstatus', {'productId':product.getId}) }}" method="post">
+                                    {% if product.getProductsStatus %}
+                                        <input id="productStatus" type="checkbox" value="{{ product.getProductsStatus }}" name="productStatus" onchange="submit()" checked data-toggle="toggle" data-onstyle="success" data-size="mini" data-on="<i class='fa fa-rocket'></i>" data-off="<i class='fa fa-rocket fa-rotate-180'></i>">
+                                    {% else %}
+                                        <input id="productStatus" type="checkbox" value="1" name="productStatus" onchange="submit()" data-toggle="toggle" data-onstyle="success" data-size="mini" data-off="<i class='fa fa-rocket fa-rotate-180'></i>" data-on="<i class='fa fa-rocket'></i>">
+                                    {% endif %}
+                                </form>
+                            </td>
+                            <td class="col-md-2 text-center">
+                                <div class="btn-group btn-group-xs">
+                                    <a href="#" class="btn btn-primary"><i class="fa fa-arrows fa-fw"></i> Sposta</a>
+                                    <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
+                                        <span class="fa fa-caret-down"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#"><i class="fa fa-pencil fa-fw"></i> Modifica</a></li>
+                                        <li><a href="{{ path('apw_blackbull_categories_deletecategory',{'id': category.getId}) }}" onclick="return confirm('Confermi l\'eliminazione?')"><i class="fa fa-trash-o fa-fw"></i> Elimina</a></li>
+                                    </ul>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                {% endfor %}
             {% endfor %}
         </tbody>
     </table>
@@ -65,11 +124,5 @@
     {{ parent() }}
     <script src="//cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js"></script>
     <script src="//cdn.datatables.net/plug-ins/3cfcc339e89/integration/bootstrap/3/dataTables.bootstrap.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('#categoryTbl').DataTable({
-                //options
-            });
-        });
-    </script>
+    <script src="{{ asset('bundles/apwblackbull/js/main.js') }}"></script>
 {% endblock %}
