--- a/src/Apw/BlackbullBundle/Resources/views/Categories/createCategory.html.twig
+++ b/src/Apw/BlackbullBundle/Resources/views/Categories/createCategory.html.twig
@@ -34,6 +34,14 @@
             </div>
 
             <div class="form-group">
+                {{ form_label(form.parentId,label|default(null), { 'label_attr': {'class': 'col-lg-2 control-label'} }) }}
+                <div class="col-lg-4">
+                    {{ form_errors(form.parentId) }}
+                    {{ form_widget(form.parentId, {'attr': {'class': 'form-control'},'help': 'Massima risoluzione: 600x400 | formati consentiti: jpg, png, tiff'}) }}
+                </div>
+            </div>
+
+            <div class="form-group">
                 {{ form_label(form.categoriesStatus,label|default(null), { 'label_attr': {'class': 'col-lg-2 control-label'} }) }}
                 <div class="col-lg-4">
                     {{ form_errors(form.categoriesStatus) }}
